# BackendTestTask

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  load_summary.json  loadtest.js  pyproject.toml
alembic/: env.py
alembic/versions/: 06e94e42b821_initial_schema.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: api.py  health.py
app/api/v1/health/: health_endpoints.py
app/api/v1/pull_request/: pull_request_endpoints.py
app/api/v1/stats/: stats_endpoints.py
app/api/v1/team/: team_endpoints.py
app/api/v1/user/: user_endpoints.py
app/core/: config.py  db.py
app/models/: __init__.py  pull_request.py  team.py  user.py
app/repositories/: pull_request_repo.py  stats_repo.py  team_repo.py  user_repo.py
app/schemas/: pull_request.py  stats.py  team.py  user.py
app/schemas/schema_enums/: pull_request_enums.py
app/services/: pr_service.py  stats_service.py  team_service.py  user_service.py
app/utils/: http_exceptions.py
tests/: conftest.py  test_health.py  test_pull_requests.py  test_stats.py  test_team.py  test_team_add.py  test_team_deactivate_users.py  test_users.py
