[project]
name = "backendtesttask"
version = "0.1.0"
description = "Backend trainee assignment"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "orjson>=3.11.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "asgi-lifespan>=2.1.0",
    "black>=25.11.0",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]

[tool.black]
line-length = 100
target-version = ["py313"]
skip-string-normalization = false

exclude = '''
/(
    alembic
    |migrations
    |\.venv
    |__pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
respect-gitignore = true

lint.select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort (импорты)
    "B", # bugbear
    "UP", # pyupgrade
    "N", # pep8-naming
    "ASYNC", # async best practices
    "A", # builtins shadowing
    "C4", # comprehensions
    "T20", # print/debug
    "SIM", # simplify
    "RUF", # ruff-specific
]

lint.ignore = [
    "E501", # длину строк контролит black
]

exclude = [
    ".venv",
    "alembic",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app", "tests"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
plugins = ["sqlalchemy.ext.mypy.plugin"]